# Media-info

./: README.md  settings.gradle
.github/: FUNDING.yml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/jldevelopers/mediainfosource/: ExampleInstrumentedTest.java
app/src/main/cpp/: CMakeLists.txt  android_compat.h  build comand.txt  mediainfo-jni.cpp  working code
app/src/main/cpp/MediaInfoLib/: .gitignore  Changes.txt  History_DLL.txt  License.html
app/src/main/cpp/MediaInfoLib/.github/workflows/: MediaInfoLib_Checks.yml
app/src/main/cpp/MediaInfoLib/Project/CMake/: CMakeLists.txt
app/src/main/cpp/MediaInfoLib/Project/MSVC2022/: MediaInfoLib.sln
app/src/main/cpp/MediaInfoLib/Project/MSVC2022/Dll/: MediaInfoDll.vcxproj
app/src/main/cpp/MediaInfoLib/Project/MSVC2022/Example/: HowToUse_Dll.vcxproj
app/src/main/cpp/MediaInfoLib/Project/MSVC2022/FieldsDescription/: FieldsDescription.vcxproj
app/src/main/cpp/MediaInfoLib/Project/MSVC2022/RegressionTest/: RegressionTest.vcxproj
app/src/main/cpp/MediaInfoLib/Project/MSVC2022/ShellExtension/: MediaInfoShellExt.vcxproj
app/src/main/cpp/MediaInfoLib/Source/Install/: MediaInfo_DLL_Windows_ARM64.nsi  MediaInfo_DLL_Windows_i386.nsi  MediaInfo_DLL_Windows_x64.nsi
app/src/main/cpp/MediaInfoLib/Source/MediaInfo/: File__Analyse_Automatic.h  File__Analyze.cpp  File__Analyze.h  File__Analyze_MinimizeSize.h  File__Analyze_Streams.cpp  File__Analyze_Streams_Finish.cpp  File__Base.h  MediaInfo_Config.cpp  MediaInfo_Config.h  MediaInfo_Config_Automatic.cpp  MediaInfo_Config_MediaInfo.cpp  MediaInfo_Config_MediaInfo.h  MediaInfo_Inform.cpp  MediaInfo_Internal.cpp  MediaInfo_Internal.h  Setup.h  TimeCode.cpp
app/src/main/cpp/MediaInfoLib/Source/MediaInfo/Archive/: File_Iso9660.cpp
app/src/main/cpp/MediaInfoLib/Source/MediaInfo/Audio/: File_Aac.cpp  File_Ac3.cpp  File_Ac4.cpp  File_Ac4.h  File_Adm.cpp  File_Adm.h  File_ChannelGrouping.cpp  File_DolbyAudioMetadata.cpp  File_DolbyE.cpp  File_Dsdiff.cpp  File_Dsf.cpp  File_Dts.cpp  File_Flac.cpp  File_Flac.h  File_Mga.cpp  File_Mpegh3da.cpp  File_Mpegh3da.h  File_Opus.cpp  File_Opus.h  File_Pcm_Vob.cpp  File_SmpteSt0302.cpp  File_SmpteSt0331.cpp  File_SmpteSt0337.cpp  File_Usac.cpp  File_Wvpk.cpp  File_Wvpk.h
app/src/main/cpp/MediaInfoLib/Source/MediaInfo/Export/: Export_Graph_gvc_Include.h
app/src/main/cpp/MediaInfoLib/Source/MediaInfo/Image/: File_Jpeg.cpp  File_Jpeg.h  File_Png.cpp  File_Psd.h  File_Tiff.cpp
app/src/main/cpp/MediaInfoLib/Source/MediaInfo/Multiple/: File_Ancillary.cpp  File_Flv.cpp  File_Gxf.cpp  File_Lxf.cpp  File_Mk.cpp  File_Mk.h  File_Mpeg4.h  File_Mpeg4_Elements.cpp  File_MpegPs.cpp  File_MpegTs.cpp  File_Mpeg_Descriptors.cpp  File_Mpeg_Descriptors.h  File_Mpeg_Psi.cpp  File_Mxf.cpp  File_Mxf.h  File_Mxf_Automated.h  File_Nsv.cpp  File_Ogg.cpp  File_Riff.cpp  File_Riff.h  File_Riff_Elements.cpp  File_Swf.cpp  File__ReferenceFilesHelper.cpp
app/src/main/cpp/MediaInfoLib/Source/MediaInfo/Reader/: Reader_File.cpp  Reader_File.h
app/src/main/cpp/MediaInfoLib/Source/MediaInfo/Tag/: File_Id3v2.cpp  File_SphericalVideo.cpp  File_VorbisCom.cpp  File_Xmp.cpp  File_Xmp.h  File__Tags.cpp
app/src/main/cpp/MediaInfoLib/Source/MediaInfo/Text/: File_AribStdB24B37.cpp  File_Cdp.cpp  File_Eia608.cpp  File_Eia708.cpp  File_OtherText.cpp  File_Pac.cpp  File_Scte20.cpp  File_Teletext.cpp  File_Ttml.cpp
app/src/main/cpp/MediaInfoLib/Source/MediaInfo/Video/: File_Avc.cpp  File_Avc.h  File_DolbyVisionMetadata.cpp  File_Ffv1.h  File_H263.cpp  File_Hevc.cpp  File_Hevc.h  File_Mpeg4v.cpp  File_Mpegv.cpp  File_Mpegv.h  File_Vc1.cpp  File_Vc3.cpp  File_Vp9.cpp  File_Vp9.h
app/src/main/cpp/MediaInfoLib/Source/MediaInfoDLL/: MediaInfoDLL.JNA.java  MediaInfoDLL.def
app/src/main/cpp/MediaInfoLib/Source/PreRelease/: FieldsDescription.cpp  Resources.cpp
app/src/main/cpp/MediaInfoLib/Source/RegressionTest/: RegressionTest_Events.cpp
app/src/main/cpp/MediaInfoLib/Source/Resource/Text/DataBase/: CodecID_Audio_Mpeg4.csv  CodecID_Other_Mpeg4.csv  CodecID_Video_Matroska.csv  CodecID_Video_Mpeg4.csv  Format.csv  Library_DivX.csv  Library_MainConcept_Avc.csv  Library_VorbisCom.csv  Library_XviD.csv
app/src/main/cpp/MediaInfoLib/Source/Resource/Text/Language/: DefaultLanguage.csv
app/src/main/cpp/MediaInfoLib/Source/Resource/Text/Mapping/: Audio.csv  General.csv  Text.csv  Video.csv
app/src/main/cpp/MediaInfoLib/Source/Resource/Text/MediaInfo/: Summary.csv
app/src/main/cpp/MediaInfoLib/Source/Resource/Text/Stream/: General.csv  Generic.csv  Image.csv  Text.csv  Video.csv
app/src/main/cpp/ZenLib/.github/workflows/: ZenLib_Checks.yml
app/src/main/cpp/ZenLib/Project/CMake/: CMakeLists.txt
app/src/main/cpp/ZenLib/Source/ZenLib/: BitStream_LE.h  Conf.h  File.cpp  FileName.cpp  Thread.cpp  Utils.cpp  Utils.h  Ztring.cpp  ZtringList.cpp  int128s.cpp  int128u.cpp
app/src/main/cpp/ZenLib/Source/ZenLib/Format/Http/: Http_Cookies.cpp
app/src/main/cpp/ZenLib/Source/ZenLib/HTTP_Client/: HTTPClient.c  HTTPClientWrapper.h
app/src/main/java/com/jldevelopers/mediainfosource/: MediaInfoHelper.java
app/src/test/java/com/jldevelopers/mediainfosource/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
